--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- header start -->
     <header>
         <!-- top banner title -->
-        <div>
+        <div id="banner-title">
             <h1>Conmebol Copa America 2021</h1>
             <button>Watch Live <i class="fas fa-arrow-right"></i></button>
         </div>
@@ -107,7 +107,9 @@
             <!-- end of bottom part -->
         </section>
     </main>
+
     <!-- footer section -->
+
     <footer>
         <!-- footer logo -->
         <div class="logo">
