--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="https://kit.fontawesome.com/a186a527ad.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    li
 </head>
 
 <body>
