--- a/index.html
+++ b/index.html
@@ -100,10 +100,37 @@
             <!-- bottom part -->
             <div class="bottom-board">
                 <div class="left-board">
-                    <img src="images/match.png" alt="">
+                    <form>
+                        <label for="fname">First Name:</label><br>
+                        <input type="text" id="fname" name="fname"><br>
+                        <label for="lname">Last Name:</label><br>
+                        <input type="text" id="lname" name="lname"><br>
+                        <label for="email">Email:</label><br>
+                        <input type="text" id="email" name="email"><br>
+                        <label for="player">Choose your favourite Player Name:</label><br>
+                        <select name="player" id="player">
+                            <option value="player-1">Neymar Jr</option>
+                            <option value="player-2">Lionel Messi</option>
+                            <option value="player-3">Cristiano Ronaldo</option>
+                            <option value="player-4">Paulo Dybala</option>
+                            <option value="player-5">Mesut Ozil</option>
+                            <option value="player-6">Mauro Icardi</option>
+                            <option value="player-7">Di Maria</option>
+                            <option value="player-8">Kylian Mbappe</option>
+                            <option value="player-9">Mohamed Salah</option>
+                            <option value="player-10">Harry Kane</option>
+                            <option value="player-11">Kevin De Bruyne</option>
+                            <option value="player-12">Philippe Coutinho</option>
+                        </select><br>
+                        <input type="submit">
+                    </form>
                 </div>
                 <div class="right-board">
-                    <img src="images/match.png" alt="">
+                    <h3>About Copa America 2021</h3>
+                    <article>
+                        This tournament is held during this covid situation. Argentina and Brazil face on final match.
+                        Argentina win this tournaent.
+                    </article>
                 </div>
             </div>
             <!-- end of bottom part -->
