--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- head sections -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +16,7 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     li
 </head>
+<!-- main body part -->
 
 <body>
     <!-- header start -->
@@ -23,12 +26,13 @@
             <h1>Conmebol Copa America 2021</h1>
             <button>Watch Live <i class="fas fa-arrow-right"></i></button>
         </div>
-        <!-- top banner -->
+        <!-- top banner image-->
         <div>
             <img class="pop-up" src="images/banner.png" alt="Banner">
         </div>
     </header>
     <!-- header end -->
+
     <main>
         <section>
             <!-- main content -->
@@ -51,47 +55,47 @@
                 </div>
                 <div class="player">
                     <img src="images/players/player-4.png" alt="">
-                    <h3>Name-4</h3>
+                    <h3>Paulo Dybala</h3>
                     <p>Player Information Area</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-5.png" alt="">
-                    <h3>Name-5</h3>
+                    <h3>Mesut Ozil</h3>
                     <p>Player Information Area</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-6.png" alt="">
-                    <h3>Name-6</h3>
+                    <h3>Mauro Icardi</h3>
                     <p>Player Information Area</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-7.png" alt="">
-                    <h3>Name-7</h3>
+                    <h3>Di Maria</h3>
                     <p>Player Information Area</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-8.png" alt="">
-                    <h3>Name-8</h3>
+                    <h3>Kylian Mbappe</h3>
                     <p>Player Information Area</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-9.png" alt="">
-                    <h3>Name-9</h3>
+                    <h3>Mohamed Salah</h3>
                     <p>Player Information Area</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-10.png" alt="">
-                    <h3>Name-10</h3>
+                    <h3>Harry Kane</h3>
                     <p>Player Information Area</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-11.png" alt="">
-                    <h3>Name-11</h3>
+                    <h3>Kevin De Bruyne</h3>
                     <p>Player Information Area</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-12.png" alt="">
-                    <h3>Name-12</h3>
+                    <h3>Philippe Coutinho</h3>
                     <p>Player Information Area</p>
                 </div>
             </div>
@@ -126,12 +130,14 @@
                     </form>
                 </div>
                 <div class="right-board">
-                    <h3>About Copa America 2021</h3>
-                    <article>
-                        This tournament is held during this covid situation. Argentina and Brazil face on final match.
-                        Argentina win this tournaent.
-                    </article>
+                    <h3>All Highlights Copa America 2021</h3>
+                    <p>
+                        This tournament is held during this covid situation. So we face a lot of difficulties. To see
+                        the live match Click the button below.
+                    </p>
+                    <button>Watch Live <i class="fas fa-arrow-right"></i></button>
                 </div>
+            </div>
             </div>
             <!-- end of bottom part -->
         </section>
