--- a/index.html
+++ b/index.html
@@ -40,63 +40,72 @@
                 <div class="player">
                     <img src="images/players/player-1.png" alt="Neymar Jr">
                     <h3>Neymar Jr</h3>
-                    <p>Neymar Jr is a forward side football player from Brazil.</p>
+                    <p>Neymar Jr born 5 February 1992 is a Brazilian professional footballer who plays as a forward.</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-2.png" alt="Lionel Messi">
                     <h3>Lionel Messi</h3>
-                    <p>Lionel Messi is Argentine Forward player.He Lead his League to win Copa America 2021
-                        Troppy.</p>
+                    <p>Lionel Messi born 24 June 1987 is an Argentine professional footballer who plays as a forward.
+                    </p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-3.png" alt="Cristiano Ronaldo">
                     <h3>Cristiano Ronaldo</h3>
-                    <p>Cristiano Ronaldo is a top player from Portugal.</p>
+                    <p>Cristiano Ronaldo born 5 February 1985 is a Portugese professional footballer who plays as a
+                        forward.</p>
                 </div>
                 <div class="player">
-                    <img src="images/players/player-4.png" alt="">
+                    <img src="images/players/player-4.png" alt="Paulo Dybala">
                     <h3>Paulo Dybala</h3>
-                    <p>Player Information Area</p>
+                    <p>Paulo Dybala born 15 November 1993 is an Argentine professional footballer who plays as a
+                        forward.</p>
                 </div>
                 <div class="player">
-                    <img src="images/players/player-5.png" alt="">
+                    <img src="images/players/player-5.png" alt="Mesut Ozil">
                     <h3>Mesut Ozil</h3>
-                    <p>Player Information Area</p>
+                    <p>Mesut Ozil born 15 October 1988 is a German professional footballer who plays as an attacking
+                        midfielder.</p>
                 </div>
                 <div class="player">
-                    <img src="images/players/player-6.png" alt="">
+                    <img src="images/players/player-6.png" alt="Mauro Icardi">
                     <h3>Mauro Icardi</h3>
-                    <p>Player Information Area</p>
+                    <p>Mauro Icardi born 19 February 1993 is an Argentine professional footballer who plays as a
+                        striker.</p>
                 </div>
                 <div class="player">
-                    <img src="images/players/player-7.png" alt="">
+                    <img src="images/players/player-7.png" alt="Di Maria">
                     <h3>Di Maria</h3>
-                    <p>Player Information Area</p>
+                    <p>Di Maria born 14 February 1988 is an Argentine professional footballer who plays as a winger or
+                        attacking midfielder.</p>
                 </div>
                 <div class="player">
-                    <img src="images/players/player-8.png" alt="">
+                    <img src="images/players/player-8.png" alt="Kylian Mbappe">
                     <h3>Kylian Mbappe</h3>
-                    <p>Player Information Area</p>
+                    <p>Kylian Mbappe born 20 December 1998 is a French professional footballer who plays as a forward.
+                    </p>
                 </div>
                 <div class="player">
-                    <img src="images/players/player-9.png" alt="">
+                    <img src="images/players/player-9.png" alt="Mohamed Salah">
                     <h3>Mohamed Salah</h3>
-                    <p>Player Information Area</p>
+                    <p>Mohamed Salah born 15 June 1992 is an Egyptian professional footballer who plays as a forward.
+                    </p>
                 </div>
                 <div class="player">
-                    <img src="images/players/player-10.png" alt="">
+                    <img src="images/players/player-10.png" alt="Harry Kane">
                     <h3>Harry Kane</h3>
-                    <p>Player Information Area</p>
+                    <p>Harry Kane born 28 July 1993 is an English professional footballer who plays as a striker.</p>
                 </div>
                 <div class="player">
-                    <img src="images/players/player-11.png" alt="">
+                    <img src="images/players/player-11.png" alt="Kevin De Bruyne">
                     <h3>Kevin De Bruyne</h3>
-                    <p>Player Information Area</p>
+                    <p>Kevin De Bruyne born 28 June 1991 is a Belgian professional footballer who plays as a midfielder.
+                    </p>
                 </div>
                 <div class="player">
-                    <img src="images/players/player-12.png" alt="">
+                    <img src="images/players/player-12.png" alt="Philippe Coutinho">
                     <h3>Philippe Coutinho</h3>
-                    <p>Player Information Area</p>
+                    <p>Philippe Coutinho born 12 June 1992 is a Brazilian professional footballer who plays as an
+                        attacking midfielder.</p>
                 </div>
             </div>
             <!-- end of main content -->
