--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <!-- top banner title -->
         <div id="banner-title">
             <h1>Conmebol Copa America 2021</h1>
-            <button>Watch Live <i class="fas fa-arrow-right"></i></button>
+            <a href="https://web.programming-hero.com" target="_blank"><button>Watch Live <i
+                        class="fas fa-arrow-right"></i></button></a>
         </div>
         <!-- top banner image-->
         <div>
@@ -112,7 +113,7 @@
 
             <!-- bottom part -->
             <div class="bottom-board">
-                <div class="left-board">
+                <div>
                     <form>
                         <label for="fname">First Name:</label><br>
                         <input type="text" id="fname" name="fname"><br>
@@ -138,13 +139,14 @@
                         <input type="submit">
                     </form>
                 </div>
-                <div class="right-board">
+                <div>
                     <h3>All Highlights Copa America 2021</h3>
                     <p>
                         This tournament is held during this covid situation. So we face a lot of difficulties. To see
                         the live match Click the button below.
                     </p>
-                    <button>Watch Live <i class="fas fa-arrow-right"></i></button>
+                    <a href="https://web.programming-hero.com" target="_blank"><button>Watch Live <i
+                                class="fas fa-arrow-right"></i></button></a>
                 </div>
             </div>
             </div>
