--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
             <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
         </div>
+        <!-- footer copyright part -->
         <div class="copyright">
-            <p>Copyright <i class="far fa-copyright"></i> 2002 Football</p>
+            <p>Copyright <i class="far fa-copyright"></i> 2022 Football</p>
         </div>
     </footer>
 </body>
